# ReadStat

./: .dockerignore  .gitignore  Dockerfile  Makefile.am  NOTES.md  build.sh  cmds.txt  make.sh  sample.csv  sample.json  sample2.csv  test_json_input.py  variablemetadata_schema.json
src/spss/: readstat_sav_date.c  readstat_sav_date.h
src/stata/: readstat_dta_days.c  readstat_dta_days.h
src/test/: test_double_decimals.c  test_dta_days.c  test_json_input.py  test_performance.c  test_sav_date.c
src/test/csv_to_dta/date/: expected_output.csv  input.csv  input.json
src/test/csv_to_dta/numeric/: expected_numeric.csv  input_numeric.csv  input_numeric.json
src/test/csv_to_dta/string/: input_string.csv  input_string.json
